Here Maps Api done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,14 +42,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-//    Here Maps
-//    implementation(name: 'HERE-sdk', ext: 'aar')
-//    implementation 'org.locationtech.jts:jts-core:1.15.0'
-//    implementation 'com.google.code.gson:gson:2.8.0'
+//    Here Maps Api
+    implementation(name: 'HERE-sdk', ext: 'aar')
+    implementation 'org.locationtech.jts:jts-core:1.15.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
 
 //    Google Api Maps
-    implementation name:'maps-sdk-3.0.0-beta', ext:'aar'
+    implementation name: 'maps-sdk-3.0.0-beta', ext: 'aar'
     implementation 'com.android.support:support-v4:+'
     implementation 'com.android.support:appcompat-v7:+'
     implementation 'com.google.android.gms:play-services-basement:15.0.1'
